--- a/index.html
+++ b/index.html
@@ -1,12 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <h1>Hello, World! Maxim</h1>
+    <h1>New Automation Tool for you</h1>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione officia quod in quisquam modi non reprehenderit
+        perspiciatis voluptatem dolorum saepe, facilis autem, reiciendis natus qui fugiat beatae aliquid quidem
+        adipisci.</p>
+
+    <h3>What we do to help our client grow in digital era</h3>
+    <h4>Make Your business To Be Better Famous In Internet</h4>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio reprehenderit mollitia aperiam, dignissimos
+        repellendus eum dolorem vel vero, quos in ex ad aspernatur a? Officiis neque exercitationem quas culpa
+        veritatis!</p>
+
+    <h3>Our Fibished Project</h3>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur hic sunt tempora numquam quasi a ab commodi
+        non. Repellat laboriosam magni nulla quidem, quia nemo eaque hic sed at ullam?</p>
+
+    <h3>Intersted to woek with our team&</h3>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, laudantium minus? Doloribus molestias non accusamus
+        cum similique. Eos earum repellat, incidunt accusantium, culpa voluptas officia libero, neque inventore
+        exercitationem magni!</p>
+    <hr>
+    <ul>
+        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit, harum!</li>
+        <li>+62-812-7313-4321</li>
+        <li>mail@gmail.com</li>
+    </ul>
+    <p>All rights reserved.</p>
 </body>
+
 </html>
