--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>site1</title>
 </head>
 
 <body>
+    <a href="index.html">Главная</a>
+    <a href="contacts.html">Контакты</a>
+
     <h1>New Automation Tool for you</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione officia quod in quisquam modi non reprehenderit
         perspiciatis voluptatem dolorum saepe, facilis autem, reiciendis natus qui fugiat beatae aliquid quidem
@@ -35,6 +38,7 @@
         <li>mail@gmail.com</li>
     </ul>
     <p>All rights reserved.</p>
+
 </body>
 
 </html>
