--- a/contacts.html
+++ b/contacts.html
@@ -9,34 +9,38 @@
 </head>
 
 <body>
-    <a href="index.html">Главная</a>
-    <a href="contacts.html">Контакты</a>
+    <ul>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="contacts.html">Контакты</a></li>
+    </ul>
 
     <h2>Contact Us </h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe unde, ab quidem atque incidunt necessitatibus.</p>
 
     <img src="" alt="picture">
 
-    <h4>Address</h4>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+    <form action="#">
+        <h4>Address</h4>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
 
-    <h4>Phone</h4>
-    <ul>
-        <li>+7-812-7313-4321</li>
-        <li>+7-817-0000-1234</li>
-    </ul>
+        <h4>Phone</h4>
+        <ul>
+            <li>+7-812-7313-4321</li>
+            <li>+7-817-0000-1234</li>
+        </ul>
 
-    <h4>Online service</h4>
-    <ul>
-        <li>www.site.com"</li>
-        <li>hessmaxim@gmail.com</li>
-    </ul>
+        <h4>Online service</h4>
+        <ul>
+            <li>www.site.com"</li>
+            <li>hessmaxim@gmail.com</li>
+        </ul>
 
-    <h4>Send us message</h4>
-    Full Name <input type="text" placeholder="Maxim Hess"><br>
-    Email <input type="email" placeholder="hessmaxim@gmail.com"><br>
-    Message <textarea name="" id="" cols="30" rows="5"></textarea><br>
-    <button type="submit">Send</button>
+        <h4>Send us message</h4>
+        Full Name <input type="text" placeholder="Maxim Hess"><br>
+        Email <input type="email" placeholder="hessmaxim@gmail.com"><br>
+        Message <textarea name="" id="" cols="30" rows="5"></textarea><br>
+        <button type="submit">Send</button>
+    </form>
 
     <script type="text/javascript" charset="utf-8" async
         src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abce909867382433053c7c949f78f03c2f0a5a684ce39c5e11806623e4baf64e0&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
