--- a/index.html
+++ b/index.html
@@ -9,8 +9,10 @@
 </head>
 
 <body>
-    <a href="index.html">Главная</a>
-    <a href="contacts.html">Контакты</a>
+    <ul>
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="contacts.html">Контакты</a></li>
+    </ul>
 
     <h1>New Automation Tool for you</h1>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione officia quod in quisquam modi non reprehenderit
