--- a/contacts.html
+++ b/contacts.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>site1</title>
+
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -14,39 +16,41 @@
         <li><a href="contacts.html">Контакты</a></li>
     </ul>
 
-    <h2>Contact Us </h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe unde, ab quidem atque incidunt necessitatibus.</p>
+    <h2 class="heading-2">Contact Us </h2>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe unde, ab quidem atque incidunt
+        necessitatibus.</p>
 
     <img src="" alt="picture">
 
     <form action="#">
-        <h4>Address</h4>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+        <h4 class="heading-4">Address</h4>
+        <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
 
-        <h4>Phone</h4>
+        <h4 class="heading-4">Phone</h4>
         <ul>
             <li>+7-812-7313-4321</li>
             <li>+7-817-0000-1234</li>
         </ul>
 
-        <h4>Online service</h4>
+        <h4 class="heading-4">Online service</h4>
         <ul>
             <li>www.site.com"</li>
             <li>hessmaxim@gmail.com</li>
         </ul>
 
-        <h4>Send us message</h4>
-        Full Name <input type="text" placeholder="Maxim Hess"><br>
-        Email <input type="email" placeholder="hessmaxim@gmail.com"><br>
-        Message <textarea name="" id="" cols="30" rows="5"></textarea><br>
-        <button type="submit">Send</button>
+        <h4 class="heading-4">Send us message</h4>
+        Full Name <input class="input" type="text" placeholder="Maxim Hess"><br>
+        Email <input class="input" type="email" placeholder="hessmaxim@gmail.com"><br>
+        Message <textarea class="input" name="" id="" cols="30" rows="5"></textarea><br>
+        <button class="submit" type="submit">Send</button>
     </form>
 
     <script type="text/javascript" charset="utf-8" async
         src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abce909867382433053c7c949f78f03c2f0a5a684ce39c5e11806623e4baf64e0&amp;width=500&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
 
-    <h3>Intersted to woek with our team&</h3>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, laudantium minus? Doloribus molestias non accusamus
+    <h3 class="heading-3">Intersted to woek with our team&</h3>
+    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, laudantium minus? Doloribus
+        molestias non accusamus
         cum similique. Eos earum repellat, incidunt accusantium, culpa voluptas officia libero, neque inventore
         exercitationem magni!</p>
     <hr>
@@ -55,7 +59,7 @@
         <li>+62-812-7313-4321</li>
         <li>mail@gmail.com</li>
     </ul>
-    <p>All rights reserved.</p>
+    <p class="paragraph">All rights reserved.</p>
 
 </body>
 
