--- a/index.html
+++ b/index.html
@@ -16,26 +16,26 @@
         <li><a href="contacts.html">Контакты</a></li>
     </ul>
 
-    <h1 class="heading-1">New Automation Tool for you</h1>
-    <p class="paragraph">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione officia quod in quisquam modi
+    <h1 class="top__heading">New Automation Tool for you</h1>
+    <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione officia quod in quisquam modi
         non reprehenderit
         perspiciatis voluptatem dolorum saepe, facilis autem, reiciendis natus qui fugiat beatae aliquid quidem
         adipisci.</p>
 
-    <h3 class="heading-3">What we do to help our client grow in digital era</h3>
-    <h4 class="heading-4">Make Your business To Be Better Famous In Internet</h4>
-    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio reprehenderit mollitia
+    <h3 class="heading">What we do to help our client grow in digital era</h3>
+    <h4 class="heading-mini">Make Your business To Be Better Famous In Internet</h4>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio reprehenderit mollitia
         aperiam, dignissimos
         repellendus eum dolorem vel vero, quos in ex ad aspernatur a? Officiis neque exercitationem quas culpa
         veritatis!</p>
 
-    <h3 class="heading-3">Our Fibished Project</h3>
-    <p class="paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur hic sunt tempora numquam
+    <h3 class="heading">Our Fibished Project</h3>
+    <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur hic sunt tempora numquam
         quasi a ab commodi
         non. Repellat laboriosam magni nulla quidem, quia nemo eaque hic sed at ullam?</p>
 
-    <h3 class="heading-3">Intersted to woek with our team&</h3>
-    <p class="paragraph">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, laudantium minus? Doloribus
+    <h3 class="heading">Intersted to woek with our team&</h3>
+    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, laudantium minus? Doloribus
         molestias non accusamus
         cum similique. Eos earum repellat, incidunt accusantium, culpa voluptas officia libero, neque inventore
         exercitationem magni!</p>
@@ -45,7 +45,7 @@
         <li>+62-812-7313-4321</li>
         <li>mail@gmail.com</li>
     </ul>
-    <p class="paragraph">All rights reserved.</p>
+    <p class="text">All rights reserved.</p>
 
 </body>
 
