--- a/index.html
+++ b/index.html
@@ -11,41 +11,58 @@
 </head>
 
 <body>
-    <ul>
-        <li><a href="index.html">Главная</a></li>
-        <li><a href="contacts.html">Контакты</a></li>
-    </ul>
+    <div class="top">
+        <ul class="header">
+            <li><a href="index.html">Главная</a></li>
+            <li><a href="contacts.html">Контакты</a></li>
+        </ul>
+        <div class="top__info">
+            <h1 class="top__heading">New Automation Tool for you</h1>
+            <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione officia quod in quisquam
+                modi
+                non reprehenderit
+                perspiciatis voluptatem dolorum saepe, facilis autem, reiciendis natus qui fugiat beatae aliquid quidem
+                adipisci.</p>
+        </div>
+    </div>
 
-    <h1 class="top__heading">New Automation Tool for you</h1>
-    <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione officia quod in quisquam modi
-        non reprehenderit
-        perspiciatis voluptatem dolorum saepe, facilis autem, reiciendis natus qui fugiat beatae aliquid quidem
-        adipisci.</p>
+    <div class="what-we-do">
+        <h3 class="heading">What we do to help our client grow in digital era</h3>
+        <div class="card">
+            <h4 class="heading-mini">Make Your business To Be Better Famous In Internet</h4>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio reprehenderit
+                mollitia aperiam, dignissimos repellendus eum dolorem vel vero, quos in ex ad aspernatur a? Officiis
+                neque exercitationem quas culpa veritatis!</p>
+        </div>
+    </div>
 
-    <h3 class="heading">What we do to help our client grow in digital era</h3>
-    <h4 class="heading-mini">Make Your business To Be Better Famous In Internet</h4>
-    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio reprehenderit mollitia
-        aperiam, dignissimos
-        repellendus eum dolorem vel vero, quos in ex ad aspernatur a? Officiis neque exercitationem quas culpa
-        veritatis!</p>
+    <div class="project">
+        <h3 class="heading">Our Fibished Project</h3>
+        <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur hic sunt tempora numquam
+            quasi a ab commodi non. Repellat laboriosam magni nulla quidem, quia nemo eaque hic sed at ullam?</p>
+    </div>
 
-    <h3 class="heading">Our Fibished Project</h3>
-    <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur hic sunt tempora numquam
-        quasi a ab commodi
-        non. Repellat laboriosam magni nulla quidem, quia nemo eaque hic sed at ullam?</p>
-
-    <h3 class="heading">Intersted to woek with our team&</h3>
-    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, laudantium minus? Doloribus
-        molestias non accusamus
-        cum similique. Eos earum repellat, incidunt accusantium, culpa voluptas officia libero, neque inventore
-        exercitationem magni!</p>
-    <hr>
-    <ul>
-        <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit, harum!</li>
-        <li>+62-812-7313-4321</li>
-        <li>mail@gmail.com</li>
-    </ul>
-    <p class="text">All rights reserved.</p>
+    <div class="footer">
+        <div class="footer__top">
+            <div class="footer__text">
+                <h3 class="heading">Intersted to woek with our team&</h3>
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, laudantium minus?
+                    Doloribus molestias non accusamus cum similique. Eos earum repellat, incidunt accusantium, culpa
+                    voluptas officia libero, neque inventore exercitationem magni!</p>
+            </div>
+        </div>
+        <hr>
+        <div class="footer__bottom">
+            <ul class="footer__info">
+                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit, harum!</li>
+                <li>+62-812-7313-4321</li>
+                <li>mail@gmail.com</li>
+            </ul>
+            <div class="footer__copy">
+                <p class="text">All rights reserved.</p>
+            </div>
+        </div>
+    </div>
 
 </body>
 
