--- a/index.html
+++ b/index.html
@@ -18,21 +18,33 @@
         </ul>
         <div class="top__info">
             <h1 class="top__heading">New Automation Tool for you</h1>
-            <p class="text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione officia quod in quisquam
-                modi
-                non reprehenderit
-                perspiciatis voluptatem dolorum saepe, facilis autem, reiciendis natus qui fugiat beatae aliquid quidem
-                adipisci.</p>
+            <p class="text top__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione officia quod in
+                quisquam modi non reprehenderit perspiciatis voluptatem dolorum saepe, facilis autem, reiciendis natus
+                qui fugiat beatae aliquid quidem adipisci.</p>
         </div>
     </div>
 
-    <div class="what-we-do">
+    <div class="what-we-do container ">
         <h3 class="heading">What we do to help our client grow in digital era</h3>
-        <div class="card">
-            <h4 class="heading-mini">Make Your business To Be Better Famous In Internet</h4>
-            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio reprehenderit
-                mollitia aperiam, dignissimos repellendus eum dolorem vel vero, quos in ex ad aspernatur a? Officiis
-                neque exercitationem quas culpa veritatis!</p>
+        <div class="card-block">
+            <div class="card">
+                <h4 class="heading-mini">Make Your business To Be Better Famous In Internet</h4>
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio reprehenderit
+                    mollitia aperiam, dignissimos repellendus eum dolorem vel vero, quos in ex ad aspernatur a? Officiis
+                    neque exercitationem quas culpa veritatis!</p>
+            </div>
+            <div class="card">
+                <h4 class="heading-mini">Bring Technology To Your Comfrotable Home</h4>
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio reprehenderit
+                    mollitia aperiam, dignissimos repellendus eum dolorem vel vero, quos in ex ad aspernatur a? Officiis
+                    neque exercitationem quas culpa veritatis!</p>
+            </div>
+            <div class="card">
+                <h4 class="heading-mini">Build Your Digital Product That Suitable For You Need</h4>
+                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio reprehenderit
+                    mollitia aperiam, dignissimos repellendus eum dolorem vel vero, quos in ex ad aspernatur a? Officiis
+                    neque exercitationem quas culpa veritatis!</p>
+            </div>
         </div>
     </div>
 
@@ -43,24 +55,27 @@
     </div>
 
     <div class="footer">
-        <div class="footer__top">
-            <div class="footer__text">
-                <h3 class="heading">Intersted to woek with our team&</h3>
-                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, laudantium minus?
-                    Doloribus molestias non accusamus cum similique. Eos earum repellat, incidunt accusantium, culpa
-                    voluptas officia libero, neque inventore exercitationem magni!</p>
+        <div class="container">
+            <div class="footer__top">
+                <div class="footer__text">
+                    <h3 class="heading footer__heading">Intersted to woek with our team?</h3>
+                    <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eum, laudantium minus?
+                        Doloribus molestias non accusamus cum similique. Eos earum repellat, incidunt accusantium, culpa
+                        voluptas officia libero, neque inventore exercitationem magni!</p>
+                </div>
             </div>
-        </div>
-        <hr>
-        <div class="footer__bottom">
-            <ul class="footer__info">
-                <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit, harum!</li>
-                <li>+62-812-7313-4321</li>
-                <li>mail@gmail.com</li>
-            </ul>
-            <div class="footer__copy">
-                <p class="text">All rights reserved.</p>
+            <hr>
+            <div class="footer__bottom">
+                <ul class="footer__info">
+                    <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Suscipit, harum!</li>
+                    <li>+62-812-7313-4321</li>
+                    <li>mail@gmail.com</li>
+                </ul>
+                <div class="footer__copy">
+                    <p class="text">All rights reserved.</p>
+                </div>
             </div>
+
         </div>
     </div>
 
