--- a/index.html
+++ b/index.html
@@ -12,15 +12,17 @@
 
 <body>
     <div class="top">
-        <ul class="header">
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="contacts.html">Контакты</a></li>
-        </ul>
-        <div class="top__info">
-            <h1 class="top__heading">New Automation Tool for you</h1>
-            <p class="text top__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione officia quod in
-                quisquam modi non reprehenderit perspiciatis voluptatem dolorum saepe, facilis autem, reiciendis natus
-                qui fugiat beatae aliquid quidem adipisci.</p>
+        <div class="container">
+            <ul class="header">
+                <li><a href="index.html">Главная</a></li>
+                <li><a href="contacts.html">Контакты</a></li>
+            </ul>
+            <div class="top__info">
+                <h1 class="top__heading">New Automation Tool for you</h1>
+                <p class="text top__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione officia quod
+                    in quisquam modi non reprehenderit perspiciatis voluptatem dolorum saepe, facilis autem, reiciendis
+                    natus qui fugiat beatae aliquid quidem adipisci.</p>
+            </div>
         </div>
     </div>
 
@@ -48,7 +50,7 @@
         </div>
     </div>
 
-    <div class="project">
+    <div class="project container">
         <h3 class="heading">Our Fibished Project</h3>
         <p class="text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Consequatur hic sunt tempora numquam
             quasi a ab commodi non. Repellat laboriosam magni nulla quidem, quia nemo eaque hic sed at ullam?</p>
