--- a/contacts.html
+++ b/contacts.html
@@ -16,42 +16,42 @@
             <li><a href="index.html">Главная</a></li>
             <li><a href="contacts.html">Контакты</a></li>
         </ul>
-        <div class="contacts-header">
+    </div>
+    <div class="contacts-header">
+        <div class="container">
             <h2 class="heading-contacts">Contact Us </h2>
             <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe unde, ab quidem atque
-                incidunt
-                necessitatibus.</p>
+                incidunt necessitatibus.</p>
         </div>
-        <div class="contacts-form">
-            <div class="contacts-info">
-                <img src="" alt="picture">
-                <h4 class="heading-mini">Address</h4>
-                <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
-                <h4 class="heading-mini">Phone</h4>
-                <ul>
-                    <li>+7-812-7313-4321</li>
-                    <li>+7-817-0000-1234</li>
-                </ul>
-                <h4 class="heading-mini">Online service</h4>
-                <ul>
-                    <li>www.site.com"</li>
-                    <li>hessmaxim@gmail.com</li>
-                </ul>
-            </div>
-            <div class="form">
-                <h4 class="heading-mini">Send us message</h4>
-                Full Name <input class=" input-text" type="text" placeholder="Maxim Hess"><br>
-                Email <input class="input-text" type="email" placeholder="hessmaxim@gmail.com"><br>
-                Message<br>
-                <textarea class="input-text" name="" id="" cols="30" rows="5"></textarea><br>
-                <button class="button-submit" type="submit">Send</button>
-            </div>
+    </div>
+    <form action="#" class="container main">
+        <div class="contacts-info">
+            <img src="" alt="picture">
+            <h4 class="heading-mini">Address</h4>
+            <p class="text">Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+            <h4 class="heading-mini">Phone</h4>
+            <ul>
+                <li>+7-812-7313-4321</li>
+                <li>+7-817-0000-1234</li>
+            </ul>
+            <h4 class="heading-mini">Online service</h4>
+            <ul>
+                <li>www.site.com"</li>
+                <li>hessmaxim@gmail.com</li>
+            </ul>
         </div>
-
+        <div class="form">
+            <h4 class="heading-mini">Send us message</h4>
+            Full Name <input class=" input-text" type="text" placeholder="Maxim Hess"><br>
+            Email <input class="input-text" type="email" placeholder="hessmaxim@gmail.com"><br>
+            Message<br>
+            <textarea class="input-text" name="" id="" cols="30" rows="5"></textarea><br>
+            <button class="button-submit" type="submit">Send</button>
+        </div>
+    </form>
+    <div class="container">
         <script type="text/javascript" charset="utf-8" async
-            src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abce909867382433053c7c949f78f03c2f0a5a684ce39c5e11806623e4baf64e0&amp;width=1140&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
-
-
+            src="https://api-maps.yandex.ru/services/constructor/1.0/js/?um=constructor%3Abce909867382433053c7c949f78f03c2f0a5a684ce39c5e11806623e4baf64e0&amp;width=100%&amp;height=400&amp;lang=ru_RU&amp;scroll=true"></script>
     </div>
     <div class="footer">
         <div class="container">
