--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
 
 <body>
     <div class="top">
-        <div class="container">
+        <div class="container top-box">
             <ul class="header">
-                <li><a href="index.html">Главная</a></li>
-                <li><a href="contacts.html">Контакты</a></li>
+                <li><a href="index.html"><img src="img/main.svg" alt="main"></a></li>
+                <li><a href="contacts.html"><img src="img/contacts.svg" alt="contacts"></a></li>
             </ul>
             <div class="top__info">
-                <h1 class="top__heading">New Automation Tool for you</h1>
-                <p class="text top__text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione officia quod
-                    in quisquam modi non reprehenderit perspiciatis voluptatem dolorum saepe, facilis autem, reiciendis
-                    natus qui fugiat beatae aliquid quidem adipisci.</p>
+                <h1 class="top__heading">New Automation Tool for Your</h1>
+                <p class="text top__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus tristique
+                    vulputate ultrices ut mauris tellus at. Posuere sollicitudin odio tellus elit.</p>
+                <a href="" class="top__button">See Our Project</a>
             </div>
         </div>
     </div>
